compiler-core/src/go/tests/snapshots/gleam_core__go__tests__assignments__discard_assignment.snap
---
source: compiler-core/src/go/tests/assignments.rs
expression: "\npub fn go() -> Int {\n  let _ = 99\n  1\n}\n"
---
----- SOURCE CODE

pub fn go() -> Int {
  let _ = 99
  1
}


----- COMPILED GO
package thepackage

func Go() int64 {
  _ = int64(99)
  return int64(1)
}
