compiler-core/src/go/tests/snapshots/gleam_core__go__tests__assignments__reserved_word_as_binding.snap
---
source: compiler-core/src/go/tests/assignments.rs
expression: "\npub fn go() -> Int {\n  let type_ = 1\n  type_\n}\n"
---
----- SOURCE CODE

pub fn go() -> Int {
  let type_ = 1
  type_
}


----- COMPILED GO
package thepackage

func Go() int64 {
  type_ := int64(1)
  _ = type_
  return type_
}
